@@ -187,10 +187,10 @@ sub new {
 
 	# Add a video screen
 	# $self->actor(
-		# SDL::Tutorial::3DWorld::Actor::TV->new(
+	 	# SDL::Tutorial::3DWorld::Actor::TV->new(
 			# position => [ 0, 1, -5 ],
 			# file     => $self->sharefile('test-mpeg.mpg'),
-		# ),
+	 	# ),
 	# );
 
 	# Add three teapots to the scene.
